feat: make wifi password configurable
